# DouyinLiveRecorder

./: .gitignore
config/: URL_config.ini  config.ini
config copy/: URL_config.ini
config wlb/: URL_config.ini  URL_config.ini.bak  config.ini
config_bak01/: URL_config.ini
qwfy/: hello.py  readme.md
qwfy/bunWork/chat_gpt_gen/: index.js  output-wlb-srt-example.md
qwfy/bunWork/video_capcut/: draft_content copy.json  draft_content_new.json  draft_content_three_segment.json  draft_content_two_segment.json  index.js  indexV1.js
qwfy/bunWork/video_capcut_keyword/: aa.json  bb.json  capcut.common.js  capcutHelper.js  capcutHelperV30.js  data.json  draft_info.json  draft_info_exampleV2.json  draft_info_example_好不好.json  output.srt  output_srt.srt
qwfy/bunWrok/video_capcut_keyword/: capcut.common.js  capcut.common.ts  capcutHelper.js  capcutHelperV1.js  capcutHelperV20.js  (+7 more)
qwfy/rust/: cmm-html-table.txt  lyy.txt  video_split.rs  华为-doyin-live-password.md  魏老板-直播-购物车-excel-2024-03-17.json  魏老板-货盘-excel-2024-03-17.txt
qwfy/rust/video_db_gen/: Cargo.toml
qwfy/rust/video_db_gen/.cargo/: config
qwfy/rust/video_db_gen/src/: main.rs  mainV1.rs  mainV2.rs  mainV3.rs  mainV4 引用 login_common.rs
qwfy/rust/video_monitor/: Cargo.toml
qwfy/rust/video_monitor/config/: douyin_config.ini  user_list.ini  user_list_all.ini
qwfy/rust/video_monitor/src/: main.rs  mainV1.rs  mainV2_headless_all.rs  mainV3_分离headless.rs  mainV4_two_01.rs
qwfy/rust/video_monitor/src/common/: douyin_fetch copy 1.rs  douyin_fetch.rs  douyin_file.rs  douyin_headless.rs  mod.rs
qwfy/rust/video_thumb_frame/: Cargo.toml
qwfy/rust/video_thumb_frame/src/: lib.rs  main.rs  mainV1.rs  mainV2.rs  mainV3.rs  mainV4.rs  mainV5.rs  mainV7.rs  mainV8 单个文件夹输入，输出.rs
qwfy/rust/video_thumb_frame/src/api/: douyin_image.rs  mod.rs
qwfy/rust/video_thumb_frame/src/common/: douyin_image_common.rs  douyin_image_common_v1.rs  mod.rs  sync_common.rs  video_common.rs
qwfy/rust/video_watch/: Cargo.toml
qwfy/rust/video_watch/src/: main.rs  mainV2.rs  mainV3.rs  mainV4.rs
qwfy/rust/video_watch/src/common/: file_common.rs  mod.rs  thumb.rs  thumbV1.rs  thumb_next.rs  thumb_with_thumb_next.rs
qwfy/video-split/: videoSplitMain.py  videoSplitMainV2.py
(+115 files in other folders)
