[package]
name = "video_db_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.6.1"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking","json"] }
tokio = { version = "1.0", features = ["full"] }
video_login = { path = "../video_login" }