[package]
name = "video_thumb_frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.9.0"
tokio = { version = "1.0", features = ["full"] }
video_login = { path = "../video_login" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11", features = ["blocking","json"] }
async-recursion = "1.1.0"
