[package]
name = "video_watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
chrono = "0.4.34"
video_login = { path = "../video_login" }
video_thumb_frame = { path = "../video_thumb_frame" }
tokio = { version = "1.0", features = ["full"] }
